--- a/RIFF.Core/RIFF.Core.csproj
+++ b/RIFF.Core/RIFF.Core.csproj
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="K4os.Compression.LZ4" Version="1.2.6" />
     <PackageReference Include="log4net" Version="2.0.12" />
-    <PackageReference Include="lz4net" Version="1.0.15.93" />
     <PackageReference Include="MediaTypeMap.Core" Version="2.3.3" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.10" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
