--- a/RIFF.Interfaces/RIFF.Interfaces.csproj
+++ b/RIFF.Interfaces/RIFF.Interfaces.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NPOI" Version="2.5.3" />
+    <PackageReference Include="SharpZipLib" Version="1.2.0" />
     <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
 
