--- a/RIFF.Web.Core/RIFF.Web.Core.nuspec
+++ b/RIFF.Web.Core/RIFF.Web.Core.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>RIFF.Web.Core</id>
-    <version>2.2.3</version>
+    <version>3.0.0</version>
     <title>RIFF Framework Web Core</title>
     <authors>rohatsu software studios limited</authors>
     <owners>rohatsu software studios limited</owners>
@@ -12,95 +12,132 @@
     <copyright>Copyright 2021 www.rohatsu.com</copyright>
 
     <dependencies>
-  <dependency id="Antlr" version="3.5.0.2" />
-  <dependency id="Autofac" version="6.2.0" />
-  <dependency id="Autofac.Mvc5" version="6.0.0" />
-  <dependency id="Autofac.WebApi2" version="6.0.1" />
-  <dependency id="codemirror.TypeScript.DefinitelyTyped" version="1.2.4" />
-  <dependency id="DevExtreme.AspNet.Data" version="2.6.2" />
-  <dependency id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" />
-  <dependency id="jQuery" version="3.3.1" />
-  <dependency id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" />
-  <dependency id="jQuery.Validation" version="1.17.0" />
-  <dependency id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" />
-  <dependency id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" />
-  <dependency id="knockoutjs" version="3.5.0" />
-  <dependency id="log4net" version="2.0.12" />
-  <dependency id="Microsoft.AspNet.Cors" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.Mvc" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.Razor" version="3.2.7" />
-  <dependency id="Microsoft.AspNet.Web.Optimization" version="1.1.3" />
-  <dependency id="Microsoft.AspNet.WebApi" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.WebApi.Core" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" />
-  <dependency id="Microsoft.AspNet.WebPages" version="3.2.7" />
-  <dependency id="Microsoft.Bcl" version="1.1.10" />
-  <dependency id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" />
-  <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
-  <dependency id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" />
-  <dependency id="Microsoft.Net.Compilers" version="3.9.0" />
-  <dependency id="Microsoft.Net.Http" version="2.2.29" />
-  <dependency id="Microsoft.NETCore.Platforms" version="3.1.6" />
-  <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
-  <dependency id="Microsoft.Win32.Primitives" version="4.3.0" />
-  <dependency id="Modernizr" version="2.8.3" />
-  <dependency id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" />
-  <dependency id="Newtonsoft.Json" version="13.0.1" />
-  <dependency id="RazorEngine" version="3.10.0" />
-  <dependency id="RazorGenerator.Mvc" version="2.4.9" />
-  <dependency id="Respond" version="1.4.2" />
-  <dependency id="System.AppContext" version="4.3.0" />
-  <dependency id="System.Buffers" version="4.5.1" />
-  <dependency id="System.Collections" version="4.3.0" />
-  <dependency id="System.Collections.Concurrent" version="4.3.0" />
-  <dependency id="System.ComponentModel" version="4.3.0" />
-  <dependency id="System.Console" version="4.3.1" />
-  <dependency id="System.Diagnostics.Debug" version="4.3.0" />
-  <dependency id="System.Diagnostics.DiagnosticSource" version="4.7.1" />
-  <dependency id="System.Diagnostics.Tools" version="4.3.0" />
-  <dependency id="System.Diagnostics.Tracing" version="4.3.0" />
-  <dependency id="System.Globalization" version="4.3.0" />
-  <dependency id="System.Globalization.Calendars" version="4.3.0" />
-  <dependency id="System.IO" version="4.3.0" />
-  <dependency id="System.IO.Compression" version="4.3.0" />
-  <dependency id="System.IO.Compression.ZipFile" version="4.3.0" />
-  <dependency id="System.IO.FileSystem" version="4.3.0" />
-  <dependency id="System.IO.FileSystem.Primitives" version="4.3.0" />
-  <dependency id="System.Linq" version="4.3.0" />
-  <dependency id="System.Linq.Expressions" version="4.3.0" />
-  <dependency id="System.Memory" version="4.5.4" />
-  <dependency id="System.Net.Primitives" version="4.3.1" />
-  <dependency id="System.Net.Sockets" version="4.3.0" />
-  <dependency id="System.Numerics.Vectors" version="4.5.0" />
-  <dependency id="System.ObjectModel" version="4.3.0" />
-  <dependency id="System.Reflection" version="4.3.0" />
-  <dependency id="System.Reflection.Extensions" version="4.3.0" />
-  <dependency id="System.Reflection.Primitives" version="4.3.0" />
-  <dependency id="System.Resources.ResourceManager" version="4.3.0" />
-  <dependency id="System.Runtime" version="4.3.1" />
-  <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" />
-  <dependency id="System.Runtime.Extensions" version="4.3.1" />
-  <dependency id="System.Runtime.Handles" version="4.3.0" />
-  <dependency id="System.Runtime.InteropServices" version="4.3.0" />
-  <dependency id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" />
-  <dependency id="System.Runtime.Numerics" version="4.3.0" />
-  <dependency id="System.Security.Cryptography.Algorithms" version="4.3.1" />
-  <dependency id="System.Security.Cryptography.Encoding" version="4.3.0" />
-  <dependency id="System.Security.Cryptography.Primitives" version="4.3.0" />
-  <dependency id="System.Security.Cryptography.X509Certificates" version="4.3.2" />
-  <dependency id="System.Text.Encoding" version="4.3.0" />
-  <dependency id="System.Text.Encoding.Extensions" version="4.3.0" />
-  <dependency id="System.Text.RegularExpressions" version="4.3.1" />
-  <dependency id="System.Threading" version="4.3.0" />
-  <dependency id="System.Threading.Tasks" version="4.3.0" />
-  <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" />
-  <dependency id="System.Threading.Timer" version="4.3.0" />
-  <dependency id="System.Xml.ReaderWriter" version="4.3.1" />
-  <dependency id="System.Xml.XDocument" version="4.3.0" />
-  <dependency id="WebActivatorEx" version="2.2.0" />
-  <dependency id="WebGrease" version="1.6.0" />
+      <dependency id="Autofac" version="6.2.0" />
+      <dependency id="Autofac.Mvc5" version="6.0.0" />
+      <dependency id="Autofac.WebApi2" version="6.0.1" />
+      <dependency id="codemirror.TypeScript.DefinitelyTyped" version="1.2.4" />
+      <dependency id="DevExtreme.AspNet.Data" version="2.6.2" />
+      <dependency id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" />
+      <dependency id="DocumentFormat.OpenXml" version="2.12.3" />
+      <dependency id="DotNetZip" version="1.15.0" />
+      <dependency id="iTextSharp.LGPLv2.Core" version="1.7.1" />
+      <dependency id="jQuery" version="3.3.1" />
+      <dependency id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" />
+      <dependency id="jQuery.Validation" version="1.17.0" />
+      <dependency id="K4os.Compression.LZ4" version="1.2.6" />
+      <dependency id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" />
+      <dependency id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" />
+      <dependency id="knockoutjs" version="3.5.0" />
+      <dependency id="log4net" version="2.0.12" />
+      <dependency id="MediaTypeMap.Core" version="2.3.3" />
+      <dependency id="Microsoft.AspNet.Cors" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.Mvc" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.Razor" version="3.2.7" />
+      <dependency id="Microsoft.AspNet.Web.Optimization" version="1.1.3" />
+      <dependency id="Microsoft.AspNet.WebApi" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.WebApi.Core" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" />
+      <dependency id="Microsoft.AspNet.WebPages" version="3.2.7" />
+      <dependency id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" />
+      <dependency id="Microsoft.AspNetCore.Razor" version="2.2.0" />
+      <dependency id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" />
+      <dependency id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" />
+      <dependency id="Microsoft.Bcl" version="1.1.10" />
+      <dependency id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" />
+      <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
+      <dependency id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" />
+      <dependency id="Microsoft.CodeAnalysis.Common" version="2.8.0" />
+      <dependency id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" />
+      <dependency id="Microsoft.CSharp" version="4.5.0" />
+      <dependency id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" />
+      <dependency id="Microsoft.Net.Http" version="2.2.29" />
+      <dependency id="Microsoft.NETCore.Platforms" version="3.1.6" />
+      <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+      <dependency id="Microsoft.Win32.Primitives" version="4.3.0" />
+      <dependency id="Modernizr" version="2.8.3" />
+      <dependency id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" />
+      <dependency id="NETStandard.Library" version="2.0.3" />
+      <dependency id="Newtonsoft.Json" version="13.0.1" />
+      <dependency id="NPOI" version="2.5.3" />
+      <dependency id="Portable.BouncyCastle" version="1.8.10" />
+      <dependency id="RabbitMQ.Client" version="6.2.1" />
+      <dependency id="RazorEngine.NetCore" version="2.2.6" />
+      <dependency id="RazorGenerator.Mvc" version="2.4.9" />
+      <dependency id="Respond" version="1.4.2" />
+      <dependency id="SharpZipLib" version="1.2.0" />
+      <dependency id="SSH.NET" version="2020.0.1" />
+      <dependency id="System.AppContext" version="4.3.0" />
+      <dependency id="System.Buffers" version="4.5.1" />
+      <dependency id="System.Collections" version="4.3.0" />
+      <dependency id="System.Collections.Concurrent" version="4.3.0" />
+      <dependency id="System.Collections.Immutable" version="1.3.1" />
+      <dependency id="System.ComponentModel" version="4.3.0" />
+      <dependency id="System.Configuration.ConfigurationManager" version="5.0.0" />
+      <dependency id="System.Console" version="4.3.1" />
+      <dependency id="System.Diagnostics.Debug" version="4.3.0" />
+      <dependency id="System.Diagnostics.DiagnosticSource" version="5.0.1" />
+      <dependency id="System.Diagnostics.FileVersionInfo" version="4.3.0" />
+      <dependency id="System.Diagnostics.StackTrace" version="4.3.0" />
+      <dependency id="System.Diagnostics.Tools" version="4.3.0" />
+      <dependency id="System.Diagnostics.Tracing" version="4.3.0" />
+      <dependency id="System.Drawing.Common" version="4.7.2" />
+      <dependency id="System.Dynamic.Runtime" version="4.3.0" />
+      <dependency id="System.Globalization" version="4.3.0" />
+      <dependency id="System.Globalization.Calendars" version="4.3.0" />
+      <dependency id="System.IO" version="4.3.0" />
+      <dependency id="System.IO.Compression" version="4.3.0" />
+      <dependency id="System.IO.Compression.ZipFile" version="4.3.0" />
+      <dependency id="System.IO.FileSystem" version="4.3.0" />
+      <dependency id="System.IO.FileSystem.Primitives" version="4.3.0" />
+      <dependency id="System.Linq" version="4.3.0" />
+      <dependency id="System.Linq.Expressions" version="4.3.0" />
+      <dependency id="System.Memory" version="4.5.4" />
+      <dependency id="System.Net.Primitives" version="4.3.1" />
+      <dependency id="System.Net.Sockets" version="4.3.0" />
+      <dependency id="System.Numerics.Vectors" version="4.5.0" />
+      <dependency id="System.ObjectModel" version="4.3.0" />
+      <dependency id="System.Reflection" version="4.3.0" />
+      <dependency id="System.Reflection.Emit" version="4.3.0" />
+      <dependency id="System.Reflection.Extensions" version="4.3.0" />
+      <dependency id="System.Reflection.Metadata" version="1.4.2" />
+      <dependency id="System.Reflection.Primitives" version="4.3.0" />
+      <dependency id="System.Resources.ResourceManager" version="4.3.0" />
+      <dependency id="System.Runtime" version="4.3.1" />
+      <dependency id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" />
+      <dependency id="System.Runtime.Extensions" version="4.3.1" />
+      <dependency id="System.Runtime.Handles" version="4.3.0" />
+      <dependency id="System.Runtime.InteropServices" version="4.3.0" />
+      <dependency id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" />
+      <dependency id="System.Runtime.Numerics" version="4.3.0" />
+      <dependency id="System.Security.AccessControl" version="5.0.0" />
+      <dependency id="System.Security.Cryptography.Algorithms" version="4.3.1" />
+      <dependency id="System.Security.Cryptography.Encoding" version="4.3.0" />
+      <dependency id="System.Security.Cryptography.Primitives" version="4.3.0" />
+      <dependency id="System.Security.Cryptography.X509Certificates" version="4.3.2" />
+      <dependency id="System.Security.Permissions" version="5.0.0" />
+      <dependency id="System.Security.Principal.Windows" version="5.0.0" />
+      <dependency id="System.Text.Encoding" version="4.3.0" />
+      <dependency id="System.Text.Encoding.CodePages" version="4.3.0" />
+      <dependency id="System.Text.Encoding.Extensions" version="4.3.0" />
+      <dependency id="System.Text.Encodings.Web" version="4.5.0" />
+      <dependency id="System.Text.RegularExpressions" version="4.3.1" />
+      <dependency id="System.Threading" version="4.3.0" />
+      <dependency id="System.Threading.Channels" version="4.7.1" />
+      <dependency id="System.Threading.Tasks" version="4.3.0" />
+      <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" />
+      <dependency id="System.Threading.Tasks.Parallel" version="4.3.0" />
+      <dependency id="System.Threading.Thread" version="4.3.0" />
+      <dependency id="System.Threading.Timer" version="4.3.0" />
+      <dependency id="System.ValueTuple" version="4.3.0" />
+      <dependency id="System.Xml.ReaderWriter" version="4.3.1" />
+      <dependency id="System.Xml.XDocument" version="4.3.0" />
+      <dependency id="System.Xml.XmlDocument" version="4.3.0" />
+      <dependency id="System.Xml.XPath" version="4.3.0" />
+      <dependency id="System.Xml.XPath.XDocument" version="4.3.0" />
+      <dependency id="WebActivatorEx" version="2.2.0" />
+      <dependency id="WebGrease" version="1.6.0" />      
 </dependencies>
 
   </metadata>
