--- a/RIFF.Web.Core/packages.config
+++ b/RIFF.Web.Core/packages.config
@@ -7,13 +7,18 @@
   <package id="codemirror.TypeScript.DefinitelyTyped" version="1.2.4" targetFramework="net48" />
   <package id="DevExtreme.AspNet.Data" version="2.6.2" targetFramework="net48" />
   <package id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.12.3" targetFramework="net48" />
+  <package id="DotNetZip" version="1.15.0" targetFramework="net48" />
+  <package id="iTextSharp.LGPLv2.Core" version="1.7.1" targetFramework="net48" />
   <package id="jQuery" version="3.3.1" targetFramework="net48" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net48" />
   <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" targetFramework="net48" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" targetFramework="net48" />
   <package id="knockoutjs" version="3.5.0" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
+  <package id="MediaTypeMap.Core" version="2.3.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
@@ -24,33 +29,49 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
-  <package id="Microsoft.Net.Compilers" version="3.9.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="3.1.6" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
-  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="RazorEngine" version="3.10.0" targetFramework="net48" />
+  <package id="NPOI" version="2.5.3" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net48" />
+  <package id="RabbitMQ.Client" version="6.2.1" targetFramework="net48" />
+  <package id="RazorEngine.NetCore" version="2.2.6" targetFramework="net48" />
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net48" />
   <package id="Respond" version="1.4.2" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
+  <package id="SSH.NET" version="2020.0.1" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net48" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net48" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="4.7.2" targetFramework="net48" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
@@ -66,7 +87,9 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net48" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
@@ -84,14 +107,23 @@
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
